<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="football_scores_app">Football Scores App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
    <string name="library_app">Library App</string>

    <string name="message_spotify_streamer">This button will launch my Spotify Streamer app!</string>
    <string name="message_football_scores_app">This button will launch my Football Scores app!</string>
    <string name="message_build_it_bigger">This button will launch my Build It Bigger app!</string>
    <string name="message_xyz_reader">This button will launch my XYZ Reader app!</string>
    <string name="message_capstone">This button will launch my capstone app!</string>
    <string name="message_library_app">This button will launch my Library app!</string>
    <string name="message_unknown_button">This button will launch an unknown app!</string>
</resources>
