<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btn_spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/football_scores_app"
        android:id="@+id/btn_football_scores_app"
        android:layout_below="@+id/btn_spotify_streamer"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btn_library_app"
        android:layout_below="@+id/btn_football_scores_app"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btn_build_it_bigger"
        android:layout_below="@+id/btn_library_app"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:layout_below="@+id/btn_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/btn_capstone"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_centerHorizontal="true"
        android:onClick="showMessage" />
</RelativeLayout>
